--- a/xe.html
+++ b/xe.html
@@ -53,13 +53,16 @@
             </div>
             <ul>
                 <li>
-                    <div class="courseName">计算机基础</div><div class="teacher">胡薇</div>
+                    <div class="courseName">计算机基础</div>
+                    <div class="teacher">胡薇</div>
                 </li>
                 <li>
-                    <div class="courseName">植物观赏学基础</div><div class="teacher">韩一尾</div>
+                    <div class="courseName">植物观赏学基础</div>
+                    <div class="teacher">韩一尾</div>
                 </li>
                 <li>
-                    <div class="courseName">生活常识101</div><div class="teacher">分享</div>
+                    <div class="courseName">生活常识101</div>
+                    <div class="teacher">分享</div>
                 </li>
             </ul>
             <div class="jh"></div>
@@ -314,6 +317,7 @@
         height: 16px;
         font-size: 8px;
         color: rgb(50, 198, 155);
+        text-align: center;
         margin: 0 auto;
         margin-bottom: 24px;
     }
@@ -573,6 +577,7 @@
         font-size: 35px;
         line-height: 100px;
         text-align: center;
+        color: rgb(50, 198, 155);
         border: 2px solid rgb(50, 198, 155);
         border-radius: 50%;
         margin: 40px 59px;
@@ -586,6 +591,7 @@
     }
     li{
         cursor: pointer;
+        margin-bottom: 10px;
         list-style:url(byd.png);
 
     }
