--- a/10.26/C.html
+++ b/10.26/C.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <img src="11.jpg" alt="">
-    <img src="22.jpg" alt="">
+    <img src="11.jpg" alt="" width="100vw">
+    <img src="22.jpg" alt="" width="100vw">
 </body>
 </html>
