--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <a href="xe.html">学而重构</a>
     <a href="/10.26/C.html">10.26</a>
+    <a href="/10.27/C.html">10.27</a>
+
     
 </body>
 </html>
