--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <a href="xe.html">学而重构</a>
     <a href="/10.26/C.html">10.26</a>
     <a href="/10.27/C.html">10.27</a>
+    <a href="/10.28/C.html">10.28</a>
 
     
 </body>
