--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
     <a href="/Eloquent Javascript/转圈圈/zqq.html">E Js 转圈圈</a>
     <a href="/复现excel表格含服务器端及交互/index.html">复现excel表格含服务器端及交互</a>
     <a href="/react todos/index.html">REACT TODO-LIST</a>
+    <a href="/数据结构/stack.html">02.21stack</a>
+    
     
 
 
